# mindclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  config.example.json  package.json  pyproject.toml  test_slack_format.py  trigger_all_cron.py
.github/workflows/: ci.yml  openclaw-npm-release.yml  parity-gate.yml  upstream-sync.yml
.upstream-sync/: README.md  base.sha  create-pr.sh  evaluate.sh  notify-feishu.sh
data/: cron_tasks.json
deploy/: com.mindclaw.plist  mindclaw.service
docs/.generated/: config-baseline.sha256  plugin-sdk-api-baseline.sha256
docs/automation/: cron-jobs.md
docs/channels/: channel-routing.md  slack.md
docs/concepts/: model-providers.md  multi-agent.md  qa-e2e-automation.md
docs/gateway/: configuration-reference.md  local-models.md
docs/help/: testing.md
docs/plan/: slack-collaboration-control-plane-v1.md
docs/plans/: 2026-03-06-mindclaw-prd.md  2026-03-07-phase0-2-impl-plan.md  2026-03-07-phase3-security-layer.md  2026-03-08-phase4-memory-system-design.md  (+6 more)
mindclaw/: _ARCHITECTURE.md  __init__.py  app.py
plugins/: ai_daily_generator.py  simple_ai_daily.py
qa/: README.md
scripts/: migrate_slack_to_telegram.py  mt-setup.ts  postinstall-bundled-plugins.mjs  release-check.ts
src/config/: io.ts  (+18 more)
tests/: _ARCHITECTURE.md  conftest.py  test_acp.py  test_agent_loop.py  test_agent_loop_tools.py  test_app.py  test_approval_per_session.py  test_bosszp.py  test_bosszp_talent.py  test_bus.py  test_bus_enhanced.py  test_channel_manager.py  test_cli_channel.py  test_commands.py  test_concurrent_agent.py  test_config.py  test_context_builder.py  test_context_builder_skills.py  test_cron_agent_integration.py  test_cron_concurrency.py  test_cron_context.py  test_cron_dangerous_bypass.py  test_cron_global_enabled.py  test_cron_history_tool.py  test_cron_logger.py  test_cron_scheduler.py  test_cron_store.py  test_cron_system_prompt.py  test_crypto.py  test_daemon.py  test_discord_channel.py  test_feishu_channel.py  test_gateway_auth.py  test_gateway_server.py  test_health_check.py  test_import.py  test_knowledge_notion.py  test_knowledge_obsidian.py  test_knowledge_text_utils.py  test_knowledge_vector.py  (+46 more)
(+482 files in other folders)
